# ACOS_Chat

./: .gitignore  README.md  comments.txt  discussion.txt  shell-0.0.1.tgz
coreutils/: CMakeLists.txt
coreutils/include/: parseargs
coreutils/lib/: parseargs
coreutils/src/: ls.c
cw_1/task_1/: main.c
cw_1/task_2/: main.c  test  test2  test_my
cw_1/task_3/: main.c
fun/: sleep_and_echo.sh  sort.sh
lab_1/grep/: CMakeLists.txt  comments.txt
lab_1/grep/src/: grep.c
lab_1/ls/: CMakeLists.txt  comments.txt
lab_1/ls/include/: parseargs
lab_1/ls/lib/: parseargs
lab_1/ls/src/: ls.c
lab_1/top/: CMakeLists.txt
lab_1/top/include/: tableprint
lab_1/top/lib/: tableprint
lab_1/top/src/: top.c
lab_2/chat/: CMakeLists.txt  client_template.txt  future_features.txt
lab_2/chat/include/: defines.h  event_loop  logger.h  pair.h  pascal_string.h  xenon_md5
lab_2/chat/include/client/: controller.h  defines.h  gui.h  gui.h.bak  listener.h  misc.h  network.h  parsed_message.h
lab_2/chat/include/client/events/: display_parsed_message_job.h  hangup_event.h  kick_event.h  list_event.h  readinput_event.h  send_message_to_server_job.h  status_event.h
lab_2/chat/include/common/: connection.h  logger.h  message.h
lab_2/chat/include/server/: conn_mgr.h  controller.h  db.h  defines.h  listener.h  misc.h  server_message.h  worker.h
lab_2/chat/include/server/events/: broadcast_message_event.h  change_worker_cnt_event.h  close_connection_event.h  input_msg_event.h  process_message_job.h  send_message_job.h  worker_exit_event.h
lab_2/chat/lib/: event_loop  xenon_md5
lab_2/chat/src/: logger.c  pascal_string.c
lab_2/chat/src/client/: controller.c  gui.c  gui.c.bak  listener.c  main.c  misc.c  parsed_message.c
lab_2/chat/src/client/events/: display_parsed_message_job.c  hangup_event.c  kick_event.c  list_event.c  readinput_event.c  send_message_to_server_job.c  status_event.c
lab_2/chat/src/common/: connection.c  logger.c  message.c  pascal_string.c
lab_2/chat/src/server/: conn_mgr.c  connection.c  controller.c  db.c  listener.c  main.c  misc.c  server_message.c  worker.c
lab_2/chat/src/server/events/: broadcast_message_event.c  change_worker_cnt_event.c  close_connection_event.c  input_msg_event.c  process_message_job.c  send_message_job.c  worker_exit_event.c
lab_2/test_event_loop/: CMakeLists.txt
lab_2/test_event_loop/include/: event_loop
lab_2/test_event_loop/src/: test_event_loop.c
lab_2/test_md5/: CMakeLists.txt
lab_2/test_md5/include/: xenon_md5
lab_2/test_md5/src/: test_md5.c
lab_2/test_ncurses_plus_sockets/: CMakeLists.txt
lab_2/test_ncurses_plus_sockets/include/: event_loop
lab_2/test_ncurses_plus_sockets/src/: main.c
lab_2/test_ts_map/: CMakeLists.txt
lab_2/test_ts_map/include/: ts_map
lab_2/test_ts_map/lib/: ts_map
lab_2/test_ts_map/src/: test_ts_map.c
lab_3/shell/: CMakeLists.txt
lab_3/shell/include/: chdir.h  command.h  lexer.h  main.h  pair.h  parser.h  runner.h  string_buffer.h  token_types.h  ts_map  ts_vector
lab_3/shell/lib/: ts_vector
lab_3/shell/src/: chdir.c  command.c  lexer.c  main.c  parser.c  runner.c  string_buffer.c
lib/event_loop/: CMakeLists.txt
lib/event_loop/include/: event_loop.h  ts_map  ts_queue
lib/event_loop/lib/: ts_map  ts_queue
lib/event_loop/src/: event_loop.c
lib/parseargs/include/: parseargs.h
lib/parseargs/src/: parseargs.c
lib/tableprint/: CMakeLists.txt
lib/tableprint/include/: tableprint.h
lib/tableprint/src/: tableprint.c
lib/ts_map/: CMakeLists.txt
lib/ts_map/include/: ts_map.h
lib/ts_map/src/: ts_map.c
lib/ts_queue/: CMakeLists.txt
lib/ts_queue/include/: ts_queue.h
lib/ts_queue/src/: ts_queue.c
lib/ts_vector/: CMakeLists.txt
lib/ts_vector/include/: ts_vector.h
lib/ts_vector/src/: ts_vector.c
lib/xenon_md5/: CMakeLists.txt
lib/xenon_md5/include/: xenon_md5.h
lib/xenon_md5/src/: xenon_md5.c
parseargs/: CMakeLists.txt
parseargs/include/: parseargs.h
